Bug 237767 - Rekonq crashed while creating thumbnails in Closed Tabs view
Summary: Rekonq crashed while creating thumbnails in Closed Tabs view
Status: RESOLVED FIXED
Alias: None
Product: rekonq
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.4.0
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Andrea Diamantini
URL:
Keywords:
Depends on:
Blocks: 237890
  Show dependency treegraph
 
Reported: 2010-05-15 23:09 UTC by Leonardo La Malfa
Modified: 2010-09-04 10:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Leonardo La Malfa 2010-05-15 23:09:56 UTC
Application: rekonq (0.4.0)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-22-generic i686
Distribution: Ubuntu 10.04 LTS

-- Information about the crash:
I hit "Closed Tabs" to retrieve a page inadvertedly closed, and Rekonq started showing some thumbnails, while creating others. Unfortunately, it didn't complete the operation before crashing, and the closed page couldn't be retrieved.

 -- Backtrace:
Application: rekonq (rekonq), signal: Aborted
[Current thread is 1 (Thread 0xb7710930 (LWP 5636))]

Thread 13 (Thread 0xb611fb70 (LWP 5637)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x011aa9d7 in ?? () from /usr/lib/libQtWebKit.so.4
#3  0x011aaa21 in ?? () from /usr/lib/libQtWebKit.so.4
#4  0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#5  0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 12 (Thread 0xb3f6ab70 (LWP 5638)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc4287 in QWaitConditionPrivate::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x00b81870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9b870e8, th=0xa600280) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x00b8438c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x00b8027b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9b870e8, th=0xa600280) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x00b84482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#10 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#11 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#12 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#13 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#14 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#15 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#16 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#17 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa600280) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#18 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa600280, previous=0xa944db8) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#19 0x00b8251e in ThreadWeaver::ThreadRunHelper::run (this=0xb3f6a2f4, parent=0x9b870e8, th=0xa600280) at ../../../threadweaver/Weaver/Thread.cpp:87
#20 0x00b82c3b in ThreadWeaver::Thread::run (this=0xa600280) at ../../../threadweaver/Weaver/Thread.cpp:142
#21 0x01fc332e in QThreadPrivate::start (arg=0xa600280) at thread/qthread_unix.cpp:248
#22 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#23 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 11 (Thread 0xb1dffb70 (LWP 5639)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc4287 in QWaitConditionPrivate::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x00b81870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9b870e8, th=0xa609f30) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x00b8438c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9b86088, th=0xa609f30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x00b8027b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9b870e8, th=0xa609f30) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x00b84482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa609f30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa609f30, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa609f30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#10 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa609f30, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#11 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa609f30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#12 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa609f30, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#13 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa609f30) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#14 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa609f30, previous=0xb2af418) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#15 0x00b8251e in ThreadWeaver::ThreadRunHelper::run (this=0xb1dff2f4, parent=0x9b870e8, th=0xa609f30) at ../../../threadweaver/Weaver/Thread.cpp:87
#16 0x00b82c3b in ThreadWeaver::Thread::run (this=0xa609f30) at ../../../threadweaver/Weaver/Thread.cpp:142
#17 0x01fc332e in QThreadPrivate::start (arg=0xa609f30) at thread/qthread_unix.cpp:248
#18 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#19 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 10 (Thread 0xa5ab3b70 (LWP 5645)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc4287 in QWaitConditionPrivate::wait (this=0xa391958, mutex=0xa392728, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0xa391958, mutex=0xa392728, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x011b0670 in ?? () from /usr/lib/libQtWebKit.so.4
#5  0x016e5924 in ?? () from /usr/lib/libQtWebKit.so.4
#6  0x016e5ac0 in ?? () from /usr/lib/libQtWebKit.so.4
#7  0x011b013f in ?? () from /usr/lib/libQtWebKit.so.4
#8  0x011b0543 in ?? () from /usr/lib/libQtWebKit.so.4
#9  0x01fc332e in QThreadPrivate::start (arg=0xa681fe8) at thread/qthread_unix.cpp:248
#10 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#11 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 9 (Thread 0xa3ab2b70 (LWP 5647)):
#0  0x00dafe16 in clock_gettime () from /lib/tls/i686/cmov/librt.so.1
#1  0x020ee6fb in qt_gettime () at kernel/qcore_unix.cpp:111
#2  0x020f3825 in QTimerInfoList::updateCurrentTime (this=0xb1eb6bb4) at kernel/qeventdispatcher_unix.cpp:340
#3  0x020f386a in QTimerInfoList::timerWait (this=0xb1eb6bb4, tm=...) at kernel/qeventdispatcher_unix.cpp:443
#4  0x020f1818 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xa3ab20cc) at kernel/qeventdispatcher_glib.cpp:136
#5  0x020f18a5 in timerSourcePrepare (source=0x0, timeout=0xdb3ff4) at kernel/qeventdispatcher_glib.cpp:169
#6  0x03007aca in g_main_context_prepare () from /lib/libglib-2.0.so.0
#7  0x03007ee9 in ?? () from /lib/libglib-2.0.so.0
#8  0x030084b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#9  0x020f160f in QEventDispatcherGlib::processEvents (this=0x9bb40e8, flags=...) at kernel/qeventdispatcher_glib.cpp:414
#10 0x020c4059 in QEventLoop::processEvents (this=0xa3ab2290, flags=) at kernel/qeventloop.cpp:149
#11 0x020c44aa in QEventLoop::exec (this=0xa3ab2290, flags=...) at kernel/qeventloop.cpp:201
#12 0x01fc05a8 in QThread::exec (this=0xa347660) at thread/qthread.cpp:487
#13 0x020a3c1b in QInotifyFileSystemWatcherEngine::run (this=0xa347660) at io/qfilesystemwatcher_inotify.cpp:248
#14 0x01fc332e in QThreadPrivate::start (arg=0xa347660) at thread/qthread_unix.cpp:248
#15 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#16 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 8 (Thread 0xa09c8b70 (LWP 5652)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc4287 in QWaitConditionPrivate::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x00b81870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9b870e8, th=0xa62a500) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x00b8438c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9b86088, th=0xa62a500) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x00b8027b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9b870e8, th=0xa62a500) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x00b84482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa62a500) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa62a500, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa62a500) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#10 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa62a500, previous=0x0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#11 0x00b844a1 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa62a500) at ../../../threadweaver/Weaver/WorkingHardState.cpp:74
#12 0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa62a500, previous=0xaf63f00) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#13 0x00b8251e in ThreadWeaver::ThreadRunHelper::run (this=0xa09c82f4, parent=0x9b870e8, th=0xa62a500) at ../../../threadweaver/Weaver/Thread.cpp:87
#14 0x00b82c3b in ThreadWeaver::Thread::run (this=0xa62a500) at ../../../threadweaver/Weaver/Thread.cpp:142
#15 0x01fc332e in QThreadPrivate::start (arg=0xa62a500) at thread/qthread_unix.cpp:248
#16 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#17 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 7 (Thread 0xaf1ffb70 (LWP 5658)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc4287 in QWaitConditionPrivate::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#3  QWaitCondition::wait (this=0x9b87100, mutex=0x9b8e418, time=4294967295) at thread/qwaitcondition_unix.cpp:159
#4  0x00b81870 in ThreadWeaver::WeaverImpl::blockThreadUntilJobsAreBeingAssigned (this=0x9b870e8, th=0xa82f4f0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:365
#5  0x00b8438c in ThreadWeaver::WorkingHardState::waitForAvailableJob (this=0x9b86088, th=0xa82f4f0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:80
#6  0x00b8027b in ThreadWeaver::WeaverImpl::waitForAvailableJob (this=0x9b870e8, th=0xa82f4f0) at ../../../threadweaver/Weaver/WeaverImpl.cpp:356
#7  0x00b84482 in ThreadWeaver::WorkingHardState::applyForWork (this=0x9b86088, th=0xa82f4f0) at ../../../threadweaver/Weaver/WorkingHardState.cpp:71
#8  0x00b814d3 in ThreadWeaver::WeaverImpl::applyForWork (this=0x9b870e8, th=0xa82f4f0, previous=0xbea7350) at ../../../threadweaver/Weaver/WeaverImpl.cpp:351
#9  0x00b8251e in ThreadWeaver::ThreadRunHelper::run (this=0xaf1ff2f4, parent=0x9b870e8, th=0xa82f4f0) at ../../../threadweaver/Weaver/Thread.cpp:87
#10 0x00b82c3b in ThreadWeaver::Thread::run (this=0xa82f4f0) at ../../../threadweaver/Weaver/Thread.cpp:142
#11 0x01fc332e in QThreadPrivate::start (arg=0xa82f4f0) at thread/qthread_unix.cpp:248
#12 0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#13 0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 6 (Thread 0x989c4b70 (LWP 9115)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc28c2 in QMutexPrivate::wait (this=0xbfd9ed8, timeout=-1) at thread/qmutex_unix.cpp:84
#3  0x01fbe072 in QMutex::lock (this=0xbfd9ea0) at thread/qmutex.cpp:205
#4  0x01fc424e in QWaitCondition::wait (this=0xbfd9ea4, mutex=0xbfd9ea0, time=30000) at thread/qwaitcondition_unix.cpp:161
#5  0x01fb82eb in QThreadPoolThread::run (this=0xb19ec88) at concurrent/qthreadpool.cpp:140
#6  0x01fc332e in QThreadPrivate::start (arg=0xb19ec88) at thread/qthread_unix.cpp:248
#7  0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 5 (Thread 0x9e9c7b70 (LWP 9116)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc28c2 in QMutexPrivate::wait (this=0xbfd9ed8, timeout=-1) at thread/qmutex_unix.cpp:84
#3  0x01fbe072 in QMutex::lock (this=0xbfd9ea0) at thread/qmutex.cpp:205
#4  0x01fc424e in QWaitCondition::wait (this=0xbfd9ea4, mutex=0xbfd9ea0, time=30000) at thread/qwaitcondition_unix.cpp:161
#5  0x01fb82eb in QThreadPoolThread::run (this=0xaa0dc40) at concurrent/qthreadpool.cpp:140
#6  0x01fc332e in QThreadPrivate::start (arg=0xaa0dc40) at thread/qthread_unix.cpp:248
#7  0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 4 (Thread 0x9c9c6b70 (LWP 9117)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x00622015 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0x01fc28c2 in QMutexPrivate::wait (this=0xbfd9ed8, timeout=-1) at thread/qmutex_unix.cpp:84
#3  0x01fbe072 in QMutex::lock (this=0xbfd9ea0) at thread/qmutex.cpp:205
#4  0x01fc424e in QWaitCondition::wait (this=0xbfd9ea4, mutex=0xbfd9ea0, time=30000) at thread/qwaitcondition_unix.cpp:161
#5  0x01fb82eb in QThreadPoolThread::run (this=0xb4273e8) at concurrent/qthreadpool.cpp:140
#6  0x01fc332e in QThreadPrivate::start (arg=0xb4273e8) at thread/qthread_unix.cpp:248
#7  0x0061d96e in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0x02d82a0e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0x9a9c5b70 (LWP 9118)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x02d8fcf3 in ?? () from /lib/tls/i686/cmov/libc.so.6
#2  0x02d26697 in ?? () from /lib/tls/i686/cmov/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 2 (Thread 0x969c3b70 (LWP 9119)):
#0  0x00e09422 in __kernel_vsyscall ()
#1  0x02d8fcf3 in ?? () from /lib/tls/i686/cmov/libc.so.6
#2  0x02d26697 in ?? () from /lib/tls/i686/cmov/libc.so.6
Backtrace stopped: previous frame identical to this frame (corrupt stack?)

Thread 1 (Thread 0xb7710930 (LWP 5636)):
[KCrash Handler]
#6  0x00e09422 in __kernel_vsyscall ()
#7  0x02cdf651 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0x02ce2a82 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0x02d1649d in ?? () from /lib/tls/i686/cmov/libc.so.6
#10 0x02d20591 in ?? () from /lib/tls/i686/cmov/libc.so.6
#11 0x02d25ce3 in ?? () from /lib/tls/i686/cmov/libc.so.6
#12 0x02d25f9d in realloc () from /lib/tls/i686/cmov/libc.so.6
#13 0x01fbda94 in qRealloc (ptr=0xc1239b0, size=128) at global/qmalloc.cpp:65
#14 0x0200d9af in QString::realloc (this=0xbf94eab4, alloc=54) at tools/qstring.cpp:1242
#15 0x0200dfb7 in QString::append (this=0xbf94eab4, str=...) at tools/qstring.cpp:1456
#16 0x0207d7a4 in QString::operator+= (this=0xbf94eb68, options=) at ../../include/QtCore/../../src/corelib/tools/qstring.h:269
#17 QUrl::toString (this=0xbf94eb68, options=) at io/qurl.cpp:5575
#18 0x00ef9323 in WebSnap::guessNameFromUrl(QUrl) () from /usr/lib/libkdeinit4_rekonq.so
#19 0x00ef9a70 in WebSnap::fileForUrl(KUrl) () from /usr/lib/libkdeinit4_rekonq.so
#20 0x00ef9f55 in WebSnap::saveResult(bool) () from /usr/lib/libkdeinit4_rekonq.so
#21 0x00efa2a8 in WebSnap::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libkdeinit4_rekonq.so
#22 0x020cac9a in QMetaObject::metacall (object=0xa98f068, cl=5636, idx=0, argv=0xa98f068) at kernel/qmetaobject.cpp:237
#23 0x020d93d5 in QMetaObject::activate (sender=0xa98f070, m=0x1ee375c, local_signal_index=2, argv=0xbf94ed88) at kernel/qobject.cpp:3293
#24 0x016856b9 in QWebPage::loadFinished(bool) () from /usr/lib/libQtWebKit.so.4
#25 0x01690381 in QWebPage::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libQtWebKit.so.4
#26 0x020cac9a in QMetaObject::metacall (object=0xa98f070, cl=5636, idx=6, argv=0xbf94eed8) at kernel/qmetaobject.cpp:237
#27 0x020d93d5 in QMetaObject::activate (sender=0xacf09708, m=0x1ee2f0c, local_signal_index=2, argv=0xbf94eed8) at kernel/qobject.cpp:3293
#28 0x0166f4d9 in ?? () from /usr/lib/libQtWebKit.so.4
#29 0x01670671 in ?? () from /usr/lib/libQtWebKit.so.4
#30 0x014a3384 in ?? () from /usr/lib/libQtWebKit.so.4
#31 0x014a3450 in ?? () from /usr/lib/libQtWebKit.so.4
#32 0x01475849 in ?? () from /usr/lib/libQtWebKit.so.4
#33 0x01476760 in ?? () from /usr/lib/libQtWebKit.so.4
#34 0x014769c0 in ?? () from /usr/lib/libQtWebKit.so.4
#35 0x014670c8 in ?? () from /usr/lib/libQtWebKit.so.4
#36 0x01475dcd in ?? () from /usr/lib/libQtWebKit.so.4
#37 0x014979b6 in ?? () from /usr/lib/libQtWebKit.so.4
#38 0x014a9373 in ?? () from /usr/lib/libQtWebKit.so.4
#39 0x014a7d32 in ?? () from /usr/lib/libQtWebKit.so.4
#40 0x0146b246 in ?? () from /usr/lib/libQtWebKit.so.4
#41 0x01475b40 in ?? () from /usr/lib/libQtWebKit.so.4
#42 0x0147850c in ?? () from /usr/lib/libQtWebKit.so.4
#43 0x01690fd3 in QWebPage::~QWebPage() () from /usr/lib/libQtWebKit.so.4
#44 0x00ef9dda in WebSnap::~WebSnap() () from /usr/lib/libkdeinit4_rekonq.so
#45 0x020d4d65 in qDeleteInEventHandler (o=0x0) at kernel/qobject.cpp:3998
#46 0x020d6428 in QObject::event (this=0xa98f068, e=0x6) at kernel/qobject.cpp:1231
#47 0x0236e4dc in QApplicationPrivate::notify_helper (this=0x9b45c58, receiver=0xa98f068, e=0xabb4678) at kernel/qapplication.cpp:4300
#48 0x0237505e in QApplication::notify (this=0xbf94fc78, receiver=0xa98f068, e=0xabb4678) at kernel/qapplication.cpp:3704
#49 0x0091af2a in KApplication::notify (this=0xbf94fc78, receiver=0xa98f068, event=0xabb4678) at ../../kdeui/kernel/kapplication.cpp:302
#50 0x020c5a3b in QCoreApplication::notifyInternal (this=0xbf94fc78, receiver=0xa98f068, event=0xabb4678) at kernel/qcoreapplication.cpp:704
#51 0x020c8473 in QCoreApplication::sendEvent (receiver=0x0, event_type=0, data=0x9b27280) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#52 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x9b27280) at kernel/qcoreapplication.cpp:1345
#53 0x020c85dd in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1238
#54 0x020f1adf in QCoreApplication::sendPostedEvents (s=0x9b49710) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#55 postEventSourceDispatch (s=0x9b49710) at kernel/qeventdispatcher_glib.cpp:276
#56 0x030045e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#57 0x030082d8 in ?? () from /lib/libglib-2.0.so.0
#58 0x030084b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#59 0x020f15d5 in QEventDispatcherGlib::processEvents (this=0x9b26e10, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#60 0x0242e135 in QGuiEventDispatcherGlib::processEvents (this=0x9b26e10, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#61 0x020c4059 in QEventLoop::processEvents (this=0xbf94fbc4, flags=) at kernel/qeventloop.cpp:149
#62 0x020c44aa in QEventLoop::exec (this=0xbf94fbc4, flags=...) at kernel/qeventloop.cpp:201
#63 0x020c869f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#64 0x0236e577 in QApplication::exec () at kernel/qapplication.cpp:3579
#65 0x00f2fa33 in kdemain () from /usr/lib/libkdeinit4_rekonq.so
#66 0x0804870b in _start ()

Possible duplicates by query: bug 214231.

Reported using DrKonqi
Comment 1 Andrea Diamantini 2010-06-03 15:59:36 UTC
commit caab7d3cd3e687d1bdc60d73a73a0728a92b58ad
Author: Andrea Diamantini <adjam7@gmail.com>
Date:   Thu Jun 3 16:00:05 2010 +0200

    This should save rekonq from crashes in closed tabs view.
    Anyway, this crash smells as a QtWebKit bug in QWebPage deletion.
    
    BUG:237767

diff --git a/src/websnap.cpp b/src/websnap.cpp
index aaaed1d..0f2dc7b 100644
--- a/src/websnap.cpp
+++ b/src/websnap.cpp
@@ -42,12 +42,12 @@
 #include <QtCore/QFile>
 
 #include <QtGui/QPainter>
+#include <QtGui/QAction>
 
 #include <QtWebKit/QWebFrame>
 #include <QtWebKit/QWebSettings>
 
 
-
 WebSnap::WebSnap(const KUrl& url, QObject *parent)
         : QObject(parent)
         , m_url(url)
@@ -64,6 +64,15 @@ WebSnap::WebSnap(const KUrl& url, QObject *parent)
     QTimer::singleShot(0, this, SLOT(load()));
 }
 
+
+WebSnap::~WebSnap()
+{
+    kDebug() << "oh oh..";
+    m_page.action(QWebPage::Stop)->trigger();
+    m_page.deleteLater();
+}
+
+
 void WebSnap::load()
 {
     m_page.mainFrame()->load(m_url);
diff --git a/src/websnap.h b/src/websnap.h
index c85dc0d..03d6374 100644
--- a/src/websnap.h
+++ b/src/websnap.h
@@ -77,6 +77,8 @@ public:
      */
     explicit WebSnap(const KUrl &url, QObject *parent = 0);
 
+    ~WebSnap();
+    
     /**
      * Snaps a pixmap of size w * h from a page and save it to cache
      *