This should save rekonq from crashes in closed tabs view. Anyway, this crash smells as a QtWebKit bug in QWebPage deletion.

BUG:237767